Implement partial defenders.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-C1GamesStarterKit-master
+README.md
+run.ps1
+run.sh
+gamelib
+documentation
+engine.jar
+game-configs.json
+License.md
+scripts
+community
+python_algo
+replays
+
