--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 README.md
 run.ps1
 run.sh
-gamelib
 documentation
 engine.jar
 License.md
@@ -9,4 +8,4 @@ scripts
 community
 python_algo
 replays
-Team_RIR_Python_alog1_beta
+beta3
